k8/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zd-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: zd-api
  template:
    metadata:
      labels:
        app: zd-api
    spec:
      containers:
      - name: zd-api
        image: rushikesh611/zerodowntime-api:latest
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: zd-api-service
spec:
  type: ClusterIP
  selector:
    app: zd-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
