k8/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zd-client
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: zd-client
  template:
    metadata:
      labels:
        app: zd-client
    spec:
      containers:
      - name: zd-client
        image: rushikesh611/zerodowntime-client:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "300m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: zd-client-service
spec:
  type: ClusterIP
  selector:
    app: zd-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
