k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: zd-api-service
            port:
              number: 3001
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: zd-client-service
            port:
              number: 3000  # Changed to match docker-compose port
